# filebrowser-tui

./: .dockerignore  .gitignore  AUTHORS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  DOCKER.md  Dockerfile  LICENSE  Makefile  README.md  SUPPORT.md  TEST_FIXES.md  docker-compose.override.yml.example  docker-compose.yml  run-docker.ps1  run-docker.sh  run-tests.sh  test-docker.sh
benches/: .critter.toml  ADDING_BENCHMARKS.md  IMPLEMENTATION.md  README.md  SUMMARY.md  TREE.txt  filebrowser_bench.rs  mod.rs  run_benches.sh  verify_setup.sh
scripts/: run-e2e-tests.sh  update-snapshots.sh
src/: app.rs  commands.rs  lib.rs  main.rs
src/file_ops/: bulk_rename.rs  bulk_rename_test.rs  history.rs  history_test.rs  mod.rs  navigator.rs  operations.rs  search.rs  search_test.rs  windows.rs
src/state/: app_state.rs  bookmarks.rs  files.rs  files_test.rs  mod.rs  pane.rs  selection.rs  selection_test.rs  tab.rs
src/ui/: layout.rs  mod.rs  render.rs  widgets.rs
tests/: ADDING_PROPERTY_TESTS.md  E2E_FRAMEWORK_SUMMARY.md  E2E_TESTING_QUICK_REF.md  INDEX.md  PROPERTY_TESTS.md  PROPERTY_TESTS_SUMMARY.md  QUICK_REFERENCE.md  README.md  SNAPSHOT_SYSTEM_SUMMARY.md  e2e_tests.rs  inline_snapshots.rs  integration_tests.rs  mod.rs  property_tests.rs  snapshot_tests.rs  tui_tester.rs  visual_tester.rs
tests/common/: mod.rs
tests/fixtures/: mod.rs
