[package]
name = "filebrowser-tui"
version = "0.1.0"
edition = "2021"
authors = ["File Browser TUI Contributors"]
description = "A terminal-based file browser for Windows built with Rust and ratatui"

[[bin]]
name = "fbt"
path = "src/main.rs"

[dependencies]
ratatui = "0.28"
crossterm = "0.28"
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ignore = "0.4"
dirs = "5.0"
chrono = "0.4"
regex = "1.10"
tempfile = "3.10"
rand = "0.8"

[dev-dependencies]
criterion = "0.5"
insta = "1.40"
proptest = "1.5"
mockall = "0.13"
pretty_assertions = "1.4"

# E2E Testing Framework Dependencies
pty = "0.2"
expectrl = "0.6"
pathdiff = "0.2"

# Platform-specific PTY dependencies
[target.'cfg(unix)'.dev-dependencies]
nix = { version = "0.29", features = ["process", "signal"] }

# Alternative: Use portable-pty for cross-platform support
portable-pty = "0.8"

[[bench]]
name = "filebrowser_bench"
harness = false

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[profile.bench]
inherits = "release"
debug = true

# Test profiles
[profile.test]
opt-level = 0
debug = true

[profile.test-dev]
inherits = "test"
opt-level = 1  # Slight optimization for faster test runs
